<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:weightSum="1"

    tools:context="com.example.a300272555.movieticketapp.HomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="266dp"
            android:layout_height="match_parent"
            android:gravity="fill_vertical"
            android:text="@string/companyName"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="35sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_gravity="bottom"
        android:fontFamily="sans-serif"
        android:gravity="bottom"
        android:paddingBottom="60dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/guestImageView"
            android:layout_width="187dp"
            android:layout_height="119dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            app:srcCompat="@drawable/guesticon" />

        <Button
            android:id="@+id/buttonGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/guestBtnText"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/adminImageView"
            android:layout_width="187dp"
            android:layout_height="119dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            app:srcCompat="@drawable/adminicon" />

        <Button
            android:id="@+id/buttonAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/adminBtnText"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:orientation="horizontal">


        <Button
        android:id="@+id/buttonAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/aboutUs"
        android:textAlignment="center" />
        <Button
            android:id="@+id/buttonContactUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/contactUs"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>
