<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context="com.example.a300272555.movieticketapp.PickMovieGuest"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:paddingBottom="45dp"
        android:text="@string/selectMovieGuest"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ListView
            android:id="@+id/listPictures"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scrollbarSize="?attr/listPreferredItemHeightLarge" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="0.09">


        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:text="@string/textViewDate"
            android:textColor="@color/default_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:text="@string/textViewDate1"
            android:textSize="24sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textViewTime"
            android:layout_toEndOf="@+id/textViewTime" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewTime1"
            android:layout_alignBottom="@+id/textViewTime1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:text="@string/textViewTime"
            android:textColor="@color/default_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTime1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:text="@string/textViewTime1"
            android:textSize="24sp"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/textViewDate1"
            android:layout_alignStart="@+id/textViewDate1" />

        <Spinner
            android:id="@+id/spinnerTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/textViewTime1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textViewTime"
            android:layout_toEndOf="@+id/textViewTickets"
            android:layout_toRightOf="@+id/textViewTickets"
            android:foreground="?attr/colorButtonNormal"
            android:textAlignment="center"
            android:visibility="visible"
           />

        <TextView
            android:id="@+id/textViewTickets"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="?attr/colorButtonNormal"
            android:text="@string/textViewTickets"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnPickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pick Date"
            android:textSize="18sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/spinnerTime" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="38dp">


        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="Children"
            android:textColor="@color/default_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Seniors"
            android:textColor="@color/default_color"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView15"
            android:layout_alignBottom="@+id/textView15"
            android:layout_centerHorizontal="true"
            android:text="Adults"
            android:textColor="@color/default_color"
            android:textSize="24sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="0.57">

        <NumberPicker
            android:id="@+id/numberPicker2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/numberPicker1"
            android:layout_alignBottom="@+id/numberPicker1"
            android:layout_centerHorizontal="true"
            android:background="?attr/colorButtonNormal"
            android:theme="@style/AppTheme">

        </NumberPicker>

        <NumberPicker
            android:id="@+id/numberPicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:theme="@style/AppTheme">

        </NumberPicker>

        <NumberPicker
            android:id="@+id/numberPicker3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/numberPicker2"
            android:layout_alignBottom="@+id/numberPicker2"
            android:layout_marginLeft="109dp"
            android:layout_marginStart="109dp"
            android:layout_toEndOf="@+id/numberPicker2"
            android:layout_toRightOf="@+id/numberPicker2"
            android:background="?attr/colorButtonNormal"
            android:theme="@style/AppTheme">

        </NumberPicker>
    </RelativeLayout>

    <Button
        android:id="@+id/btnProceedToPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/btnProceedToPay" />
</LinearLayout>
